<resources>
    <string name="app_name">鸿网大宗</string>
    <string name="easy_permissions">该APP需要您允许打开电话，拍摄照片和访问设备上的文件的权限</string>
    <string name="login_state_expired">登录已过期请重新登录</string>
    <string name="login_state">正在玩命登录</string>
    <string name="register_state">正在玩命注册</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="logout">退出登录</string>
    <string name="dynamic_pwd">手机动态密码登录</string>
    <string name="account_pwd">账号密码登录</string>
    <string name="pwd_forget">忘记密码?</string>
    <string name="qq">QQ</string>
    <string name="we_chat">微信</string>
    <string name="blog">微博</string>
    <string name="title_tab0">首页</string>
    <string name="title_tab1">求购</string>
    <string name="title_tab2">发布</string>
    <string name="title_tab3">物流</string>
    <string name="title_tab4">我的</string>
    <string name="title_ad">2018鸿网大宗能化产业论坛</string>
    <string name="account_existed">账号已存在！</string>
    <string name="name">姓名</string>
    <string name="name_hint">请输入姓名</string>
    <string name="company">公司</string>
    <string name="company_hint">请输入公司名称</string>
    <string name="telephone">电话</string>
    <string name="telephone_hint">请输入电话号码</string>
    <string name="verification">验证码</string>
    <string name="verification_hint">请输入验证码</string>
    <string name="verification_get">获取验证码</string>
    <string name="pwd">密码</string>
    <string name="pwd_confirm">确认密码</string>
    <string name="pwd_hint">请输入密码</string>
    <string name="purchaser">我是买家</string>
    <string name="business">我是商家</string>
    <string name="market_consultant">营销顾问</string>
    <string name="assign_market_consultant">我需要平台为我指派营销顾问</string>
    <string name="business_management">商家管理</string>
    <string name="chose">请选择</string>
    <string name="protocol">同意鸿网大宗</string>
    <string name="terms_of_service">《服务条款》</string>
    <string name="and">和</string>
    <string name="privacy_policy">《隐私协议》</string>
    <string name="title_terms_of_service">服务条款</string>
    <string name="title_privacy_policy">隐私协议</string>
    <string name="name_null">姓名不能为空</string>
    <string name="telephone_no_null">手机号不能为空</string>
    <string name="telephone_not_right">请输入正确的手机号</string>
    <string name="id_no_null">身份证号码不能为空</string>
    <string name="id_not_right">请输入正确的身份证号码</string>
    <string name="pwd_null">密码不能为空</string>
    <string name="pwd_different">两次输入的密码不相同</string>
    <string name="verification_code_null">验证码为空</string>
    <string name="send_again">重新发送</string>
    <string name="after_seconds">秒后</string>
    <string name="company_null">公司名称不能为空</string>
    <string name="admin_null">请选择营销顾问或选择平台指派</string>
    <string name="eula_null">请先同意用户协议</string>
    <string name="mood_index_title">PP情绪指数</string>
    <string name="deal_title">今日成交(现款价)</string>
    <string name="deal_date">+关注</string>
    <string name="deal_city">HangKong</string>
    <string name="deal_material">PC</string>
    <string name="deal_price">12345</string>
    <string name="deal_type">T30S</string>
    <string name="deal_day">day 0.6%</string>
    <string name="deal_week">week 0.2%</string>
    <string name="deal_price_unit">元/吨</string>
    <string name="title_fy_news">市场风云</string>
    <string name="title_sd_news">深度研报</string>
    <string name="title_hy_news">行业热点</string>
    <string name="title_tt_news">宏观头条</string>
    <string name="title_hw24h">鸿网２４小时</string>
    <string name="title_re">推荐</string>
    <string name="trade_abc_re">行业ABC</string>
    <string name="trade_re">行业研究</string>
    <string name="source_de">来源：%1$s</string>
    <string name="comment0_de">精彩评论(0)</string>
    <string name="comment_de">精彩评论(%1$s)</string>
    <string name="comment_null_de">鸿网期待您的精彩评论哦！</string>
    <string name="reply_de">回复</string>
    <string name="recommend_de">热门推荐</string>
    <string name="recommend_null_de">还没有推荐！</string>
    <string name="search_de">说点什么...</string>
    <string name="statement_de">免责声明： 鸿网大宗提供的信息仅供客户决策参考，并不构成对客户决策的直接建议，客户不应以此取代自己的独立判断，客户做出的任何决策与鸿网大宗无关。</string>
    <string name="title_price">查价格</string>
    <string name="spec_p">型号</string>
    <string name="brand_p">厂家</string>
    <string name="area_p">销售地</string>
    <string name="regions_p">区域</string>
    <string name="date">日期</string>
    <string name="collection">收藏</string>
    <string name="price">¥ %1$s</string>
    <string name="up_down">涨跌%1$s</string>
    <string name="up_down0">涨跌</string>
    <string name="up_down1">涨跌%1$s,作者(字符串)%2$s,编号(整数)%3$d,价格(浮点型)：%4$.2f</string>
    <string name="up_down2">涨跌%1$s,作者(字符串)%2$s,编号(整数)%3$d,价格(浮点型)：%4$.2f</string>
    <string name="look_more_price">查看更多</string>
    <string name="load_more_price">上拉加载更多</string>
    <string name="collection_title">我的收藏</string>
    <string name="collected_remind">已收藏</string>
    <string name="breed">品类</string>
    <string name="spec">型号</string>
    <string name="factory">厂家</string>
    <string name="area_sell">销售地</string>
    <string name="title_info">看资讯</string>
    <string name="all_info">全部</string>
    <string name="price_info">企业调价</string>
    <string name="dynamic_info">装置动态</string>
    <string name="title_cl">找客户</string>
    <string name="search_cl">\t包装材料，生活日用，通用塑料</string>
    <string name="filter_cl">筛选</string>
    <string name="update_cl">即刻开启“用户查询”功能</string>
    <string name="no_more_cl">升级会员查看更多</string>
    <string name="update_button_cl">成为VIP</string>
    <string name="title_filter_cl">筛选</string>
    <string name="all_filter_cl">全部地区</string>
    <string name="more_filter_cl">更多</string>
    <string name="selected_filter_cl">已选区域</string>
    <string name="clear_filter_cl">清空条件</string>
    <string name="confirmation_filter_cl">确认</string>
    <string name="link_way_fi">手机号码/邮箱</string>
    <string name="reg_money_fi">注册资本</string>
    <string name="reg_date_fi">注册时间</string>
    <string name="phone_fi">有手机</string>
    <string name="email_fi">有邮箱</string>
    <string name="money_100">100W以内</string>
    <string name="money_100_200">100-200W</string>
    <string name="money_200_500">200-500W</string>
    <string name="money_500_1000">500-1000W</string>
    <string name="money_1000">1000W以上</string>
    <string name="date_1">1年以内</string>
    <string name="date_1_5">1-5年</string>
    <string name="date_5_10">5-10年</string>
    <string name="date_10_15">10-15年</string>
    <string name="date_15">15年以上</string>
    <string name="business_info_cld">工商信息</string>
    <string name="company_intro_cld">公司简介</string>
    <string name="business_scope_cld">经营范围</string>
    <string name="product_info_cld">生产信息</string>
    <string name="material_info_cld">使用原料</string>
    <string name="device_list_cld">设备清单</string>
    <string name="product_device_cld">产品设备展示</string>
    <string name="manager"> | 总经理</string>
    <string name="unfold">展开</string>
    <string name="fold">收起</string>
    <string name="nothing">无</string>
    <string name="person">人</string>
    <string name="ten_thousand">万元</string>
    <string name="companyEmployeeNumber">公司规模</string>
    <string name="companyRegisterMoney">注册资本</string>
    <string name="companyCreatedTimeStr">注册时间</string>
    <string name="yearSaleAmount">年销售额</string>
    <string name="factoryArea">厂房面积</string>
    <string name="kgRate">机器开工率</string>
    <string name="materialType">原料类型</string>
    <string name="productTpe">产品类型</string>
    <string name="marketFlow">市场流向</string>
    <string name="materialName">常用品种</string>
    <string name="materialManufactory">常用商家</string>
    <string name="materialGrade">常用型号</string>
    <string name="deviceName">设备名称</string>
    <string name="deviceBrand">品牌</string>
    <string name="deviceGrade">型号</string>
    <string name="deviceQuantity">设备数量</string>
    <string name="purchaseDate">购买日期</string>
    <string name="title_up">升级会员</string>
    <string name="remind_up">成为VIP,即刻开启“用户查询”功能</string>
    <string name="vip_right_up">会员权益</string>
    <string name="pay_up">支付方式</string>
    <string name="update_vip_now">立即开通会员</string>
    <string name="no_pay_up">请选择支付方式</string>
    <string name="sparrow">麻雀</string>
    <string name="magpie">喜鹊</string>
    <string name="phoenix">凤凰</string>
    <string name="currency_sign">¥</string>
    <string name="currency_unit">元</string>
    <string name="title_index">看指数</string>
    <string name="title2_index">原料品类</string>
    <string name="newest_index">最新</string>
    <string name="up_down_index">涨跌</string>
    <string name="date_index">日期</string>
    <string name="title_ma">买原料</string>
    <string name="breed_ma">PP</string>
    <string name="spec_ma">牌号</string>
    <string name="city_ma">城市</string>
    <string name="brand_ma">厂商</string>
    <string name="search_ma">\t寻找您需要的原料</string>
    <string name="price_ma">价格：%1$s 元/吨</string>
    <string name="address_ma">交货地：%1$s</string>
    <string name="telephone_ma">联系电话：</string>
    <string name="amount_ma">数量：%1$s 吨</string>
    <string name="manufacturer_ma">厂商：%1$s</string>
    <string name="date_ma">时间：%1$s</string>
    <string name="supplier_ma">供应商：%1$s</string>
    <string name="negotiation">面议</string>
    <string name="title_user_notes">用户须知</string>
    <string name="contents_note_title">内容说明</string>
    <string name="contents_note">这是国内的第一个制塑行业通讯录，基于我们积累的数据信息通过大数据技术制作而成，我们采用科学抽样的方式验证过联系信息，确保信息的精准、全面，但数据庞大，验证周期要三个多月，在此期间企业可能有所变动，敬请谅解，也欢迎反馈给我们。</string>
    <string name="privacy_feedback_title">隐私反馈</string>
    <string name="privacy_feedback">内容来源于社会公开的信用信息和企业自愿公开的数据信息，仅涉及公开的机构联络信息，决不涉及到对个人隐私造成侵犯的相关信息，确保符合国家法律要求。我们尊重个人隐私，明示了相关准则，确保会员任何隐私信息的安全，绝不泄露。</string>
    <string name="disclaimer_title">免责声明</string>
    <string name="disclaimer">该通讯录仅供会员内部使用，为您的决策提供参考，禁止用作任何违法用途，因违法使用该内容而产生的任何后果，我们概不负责。\n\n联系电话：021—39915726      15618080206 （微信）</string>
    <string name="title_order_notes">订单须知</string>
    <string name="order_note_title1">特别提示</string>
    <string name="order_note_title2">订单内容与价格</string>
    <string name="order_note_title3">收费标准</string>
    <string name="order_note_title4">订单生效与解除</string>
    <string name="order_note_title5">解决争议适用法律法规约定</string>
    <string name="contents_note1">鸿网电商平台上的产品由具备相关资质的合作供应商直接提供，平台仅提供代采服务、资金服务、物流服务等。\n 在订单确认前，请仔细阅读本须知。当您开始下单产品时，表明您已仔细阅读并接受协议中的所有条款。</string>
    <string name="contents_note2">订单中内容包括代采服务、资金服务、物流服务等对应产品服务价格，以上服务内容在订单中又被分为固定服务和延伸服务两类。具体的最终包含内容以确定的订单约定内容为准。 \n 鸿网电商平台及其合作供应商保留在不事先知会的情况下更改其网站上已公布的产品价格的权利。您确认的订单价格，以确认订单上约定的金额为准。</string>
    <string name="contents_note3">平台需收取单笔订单金额的0.3%手续费，会员可开通包年免手续费服务。 \n 平台需收取授信模式下的资金服务费。资金服务费根据占用资金、会员的资金服务费利率和账期天数计算（相乘），授信模式必须先缴纳平台交易保证金方可进行交易。</string>
    <string name="contents_note4">只有供应商确认了您的订单，并且您及时支付订单的应付费用（手续费或订金），确认的订单方会生效。如您未按要求及时支付相关费用，而此时产品的价格、内容或标准等发生变化，鸿网电商平台及其合作供应商对此将不承担任何责任。 \n 订单生效后，如需取消订单，请您及时联系平台的营销顾问进行咨询，但您必须承担处理该订单已经支出的一切费用。包括采购损失费、物流费、人员成本费用等。</string>
    <string name="contents_note5">在您的预订生效后，如果在本须知或合同约定内容履行过程中，您对相关事宜的履行发生争议，您同意按照相关法律法规或履约合同来解决争议。本须知未尽的其他事项，会在其他协议中另行约定。 \n\n 联系电话：021-39915726</string>
    <string name="title_per">个人中心</string>
    <string name="login_per">登录/注册</string>
    <string name="expire_per">level %2$s到期</string>
    <string name="collection_per">我的收藏</string>
    <string name="deals_per">交易记录</string>
    <string name="type_feedback">反馈问题类型</string>
    <string name="price_feedback">价格问题</string>
    <string name="material_feedback">原料问题</string>
    <string name="experience_feedback">体验问题</string>
    <string name="other_feedback">其他</string>
    <string name="hint_feedback">感谢反馈，请您写下您的问题或意见</string>
    <string name="submit">提交</string>
    <string name="company_invoice">开票单位:</string>
    <string name="tax_number">税号:</string>
    <string name="bank_name_invoice">开户行:</string>
    <string name="bank_account_invoice">账号:</string>
    <string name="tel_invoice">联系电话:</string>
    <string name="address_invoice">邮寄地址:</string>
    <string name="amount_invoice">开票金额:</string>
    <string name="apply_submit">提交申请</string>
</resources>