<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/deal_background"
    android:orientation="vertical"
    android:id="@+id/layout_item_deal_card"
    android:paddingTop="@dimen/padding_top_item_deal"
    android:paddingLeft="@dimen/padding_top_item_deal"
    android:paddingRight="@dimen/padding_top_item_deal"
    android:paddingBottom="@dimen/padding_top_item_deal"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/area"
            android:gravity="left"
            android:text="@string/deal_city"
            style="@style/DealBoldTextStyle"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/breed"
            android:gravity="center"
            android:text="@string/deal_material"
            style="@style/DealBoldTextStyle"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:id="@+id/price"
            android:gravity="right"
            android:text="@string/deal_price"
            style="@style/DealOrangeTextStyle"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="left"
            android:textColor="@color/blackText4"
            android:text="@string/deal_price_unit"
            android:textSize="10sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/day_rate"
                style="@style/DealTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="left"
                android:text="@string/deal_day" />

            <ImageView
                android:id="@+id/dealTag_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/arrow_margin"
                android:src="@drawable/down_green" />
        </LinearLayout>

        <TextView
            android:id="@+id/spec"
            style="@style/DealSpecBoldTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/deal_type" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/week_week"
                style="@style/DealTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/deal_week" />

            <ImageView
                android:id="@+id/dealTag_week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/arrow_margin"
                android:src="@drawable/down_green" />
        </LinearLayout>


    </LinearLayout>


</LinearLayout>