<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/whiteBackground"
    tools:context="com.ihwdz.android.hwapp.ui.me.records.invoice.InvoiceActivity">

    <include
        layout="@layout/base_title_bar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/item_normal_padding">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="right"
            android:background="@color/whiteBackground">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                style="@style/InvoiceTitleTextStyle"
                android:text="@string/company_invoice"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                style="@style/InvoiceTitleTextStyle"
                android:text="@string/tax_number"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                style="@style/InvoiceTitleTextStyle"
                android:text="@string/bank_name_invoice"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                style="@style/InvoiceTitleTextStyle"
                android:text="@string/bank_account_invoice"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                style="@style/InvoiceTitleTextStyle"
                android:text="@string/tel_invoice"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                style="@style/InvoiceTitleTextStyle"
                android:text="@string/address_invoice"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                style="@style/InvoiceTitleTextStyle"
                android:text="@string/amount_invoice"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="16dp"
            android:background="@color/whiteBackground">

            <TextView
                android:id="@+id/tv_company"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                style="@style/InvoiceTextStyle"
                android:text="@string/company_invoice"/>
            <TextView
                android:id="@+id/tv_tax"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                style="@style/InvoiceTextStyle"
                android:text="@string/tax_number"/>

            <TextView
                android:id="@+id/tv_bank_name"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                style="@style/InvoiceTextStyle"
                android:text="@string/bank_name_invoice"/>
            <TextView
                android:id="@+id/tv_bank_account"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                style="@style/InvoiceTextStyle"
                android:text="@string/bank_account_invoice"/>
            <TextView
                android:id="@+id/tv_telephone"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                style="@style/InvoiceTextStyle"
                android:text="@string/tel_invoice"/>
            <TextView
                android:id="@+id/tv_address"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                style="@style/InvoiceTextStyle"
                android:text="@string/address_invoice"/>
            <TextView
                android:id="@+id/tv_amount"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                style="@style/InvoiceTextStyle"
                android:textColor="@color/orangeTab"
                android:text="@string/amount_invoice"/>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/gradient_orange_oval_background"
        android:textColor="@color/whiteBackground"
        android:text="@string/apply_submit"
        />

</LinearLayout>
